@startuml
'https://plantuml.com/class-diagram

interface Initializable{}

class App {
    + main()
    + start()
}

class InventoryController {
- inventoryTable : TableView
- valColumn : TableColumn
- serColumn : TableColumn
- nameColumn : TableColumn
- inputValue : TextField
- inputSerial : TextField
- inputName : TextField
- errorLabel : Label

- currentInventory : Inventory
'13.2, 14.1
- fileChooser : FileChooser

'1
'8-10 handled in TableView
'3
+ newItemPressed()
'4
+ deleteItemPressed()
'5
+ editItemValuePressed()
'6
+ editItemSerialPressed()
'7
+ editItemNamePressed()
'11
+ searchSerialNumberPressed()
'12
+ searchNamePressed()
'13.0
+ saveInventoryPressed()
'14.0
+ loadInventoryPressed()

+ initialize()
+ makeItem()
+ removeItem()
'7 handled in TableView
'+ editItemName()
'+ editItemValue()
+ searchInventoryBySerialNumber()
+ searchInventoryByName()
'13.1.1
+ saveTSVFormat()
'13.1.2
+ saveHTMLFormat()
'13.1.3
+ saveJSONFormat()
+ loadInventory()
}

class Inventory {
- itemsArrayList : ArrayList<Item>
- itemsObservable : ObservableList<Item>

+ Inventory()

'3.0, calls checkConflict
+ addItem()
+ getItemSerialIndex() : int
+ getItemNameIndex() : int
+ getItemObject() : Item
+ getItemsObservable : ObservableList<Item>
'5
+ editItemValue()
'6.0, calls checkConflict
+ editItemSerialNumber()
'7
+ editItemName()
'4
+ removeItem()
'3.1, 6.1
+ checkConflict() : boolean
- checkParameters() : boolean
}

class Item {
'2.1
-monetaryValue : Double
'2.2
-serialNumber : String
'2.3
-name : String

+ Item()
+ Item(Double, String, String)

+ setMonetaryValue()
+ getMonetaryValue() : Double
+ setSerialNumber()
+ getSerialNumber() : String
+ setName()
+ getName() : String
}

javafx.Application <|-- App
App - InventoryController
Initializable <|.. InventoryController
InventoryController -- Inventory
Inventory "1 " *-- "many" Item
@enduml